--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^5.2.0",
+    "babel-preset-expo": "^3.0.0",
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0"
