--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "styled-components": "^2.1.2",
     "udacifitness-calendar": "^11.0.0"
   }
 }
